@@ -42,6 +42,8 @@ return array(
         ),
 
     'integration_key' => sha1(uniqid()),
+
+    'mobile_enable' => true,
 );
 
  
