@@ -1003,11 +1003,13 @@ var Application = function Application(server) {
     var $window = $(window).on('connect', $.proxy(this.onConnect, this)).on('disconnect', $.proxy(this.onDisconnect, this)).on('message', $.proxy(this.onMessage, this)).on('log', $.proxy(this.onLog, this)).on('user_join', $.proxy(this.onUserJoin, this)).on('user_leave', $.proxy(this.onUserLeave, this)).on('error', $.proxy(this.onError, this));
     $(document).on('click.popover', '[data-popover]', $.proxy(this.onPopoverClick, this)).on('click.profile', '[data-user-id]', $.proxy(this.onProfileClick, this)).on('click.username', '[data-user-name]', $.proxy(this.onUsernameClick, this)).on('click.private', '[data-private]', $.proxy(this.onPrivateClick, this));
     $('[data-action="bbcode"]').on('click.bbcode', $.proxy(this.onBBCodeClick, this));
-    if ($window.width() < 480) {
-      var snapper = new Snap({
-        element: document.getElementById('chat'),
-        disable: 'right'
-      });
+    if (window.config.mobile_enable) {
+      if ($window.width() < 480) {
+        var snapper = new Snap({
+          element: document.getElementById('chat'),
+          disable: 'right'
+        });
+      }
     }
   },
   run: function() {
